--- a/style.css
+++ b/style.css
@@ -106,6 +106,13 @@ body {
   bottom: -4px;
   left: 20%;
 }
+#mobile {
+  display: none;
+  align-items: center;
+}
+#close {
+  display: none;
+}
 /* home page */
 #hero {
   background-image: url("./img/hero4.png");
@@ -434,4 +441,215 @@ footer a {
   text-decoration: none;
   color: #222;
   margin-bottom: 10px;
+}
+footer .follow {
+  margin-top: 20px;
+}
+footer .follow i {
+  color: #465b52;
+  padding-right: 4px;
+  cursor: pointer;
+}
+footer .install .row .funga {
+  border: 1px solid #088178;
+  border-radius: 6px;
+}
+footer .install .row img {
+  margin: 10px 0 15px 0;
+}
+footer .follow i:hover,
+footer a:hover {
+  color: #088178;
+}
+footer .copyright {
+  width: 100%;
+  text-align: center;
+}
+
+/* start media query */
+@media (max-width: 799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+  /* making the navbar responsive starts here */
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: all 0.3s ease-in-out;
+  }
+  #navbar.active {
+    right: 0;
+  }
+  #navbar li {
+    margin-bottom: 25px;
+  }
+  #mobile {
+    display: flex;
+    align-items: center;
+  }
+  #mobile i {
+    color: #1a1a1a;
+    font-size: 24px;
+    cursor: pointer;
+    padding-left: 20px;
+  }
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #lg-bag {
+    display: none;
+  }
+  /* making the hero section starts here */
+  #hero {
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature {
+    justify-content: center;
+  }
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+  /* making the featured section responsive starts here */
+  #product1 .pro-container {
+    justify-content: center;
+  }
+  #product1 .pro {
+    margin: 15px;
+  }
+  /* making the bannner responsive starts here */
+  #banner {
+    height: 20vh;
+  }
+  /* making the other banners responsive */
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 30vh;
+  }
+  /* making banner three responsive */
+  #banner3 {
+    padding: 0 40px;
+  }
+  #banner3 .banner-box {
+    width: 28%;
+  }
+  /* newsletter being made responsive */
+  #newsletter .form {
+    width: 70%;
+  }
+  #newsletter h4 {
+    padding-bottom: 7px;
+  }
+  #newsletter p {
+    padding-bottom: 7px;
+  }
+}
+/* end media query */
+/* mobile phone media query */
+@media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  #hero {
+    padding: 0 20px;
+    background-position: 55%;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  h1 {
+    font-size: 38px;
+  }
+  #feature {
+    justify-content: space-between;
+  }
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+  /* making the product page responsive starts here */
+  #product1 .pro {
+    width: 100%;
+  }
+  /* banner responsiveness starts here */
+  #banner {
+    height: 40vh;
+  }
+  /* sm banner styling starts here */
+  #sm-banner .banner-box {
+    height: 35vh;
+  }
+  #sm-banner .banner-box2 {
+    margin-top: 20px;
+  }
+  #banner3 {
+    padding: 0 20px;
+  }
+  #banner3 .banner-box {
+    width: 100%;
+  }
+  /* making the newsletter form resonsive */
+  #newsletter .form {
+    width: 100%;
+  }
+  #newsletter {
+    padding: 40px 20px;
+  }
+  /* footer responsiveness */
+  footer .copyright {
+    text-align: start;
+  }
+}
+/* shop.html styling starts here */
+#page-header {
+  background-image: url("./img/banner/b1.jpg");
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+#page-header h2,
+#page-header p {
+  color: #fff;
+}
+#pagination {
+  text-align: center;
+}
+#pagination a {
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 600;
+}
+#pagination a:hover {
+  background-color: #465b52;
+}
+#pagination a i {
+  font-size: 16px;
+  font-weight: 600;
 }
