--- a/style.css
+++ b/style.css
@@ -618,6 +618,18 @@ footer .copyright {
   footer .copyright {
     text-align: start;
   }
+  /* sproduct responsiveness starts here */
+  #proDetails {
+    display: flex;
+    flex-direction: column;
+  }
+  #proDetails #picha {
+    width: 100%;
+    margin-right: 0;
+  }
+  #proDetails #details {
+    width: 100%;
+  }
 }
 /* shop.html styling starts here */
 #page-header {
@@ -652,4 +664,61 @@ footer .copyright {
 #pagination a i {
   font-size: 16px;
   font-weight: 600;
+}
+
+/* sproduct.html starts here */
+#proDetails {
+  display: flex;
+  margin-top: 20px;
+}
+#proDetails .single-pro-image {
+  width: 40%;
+  margin: 50px;
+}
+.small-img-group {
+  display: flex;
+  justify-content: space-between;
+}
+.small-img-col {
+  flex-basis: 24%;
+  cursor: pointer;
+}
+#proDetails .single-pro-details {
+  width: 50%;
+  padding-top: 70px;
+}
+#proDetails .single-pro-details h6 {
+  margin-top: 10;
+}
+#proDetails .single-pro-details h4 {
+  padding: 40px 0 20px 0;
+}
+#proDetails .single-pro-details h2 {
+  font-size: 26px;
+}
+#proDetails .single-pro-details select {
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+#proDetails .single-pro-details input {
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+#proDetails .single-pro-details input:focus {
+  outline: none;
+}
+
+#proDetails .single-pro-details button {
+  background-color: #088178;
+  color: #fff;
+}
+#proDetails .single-pro-details button:hover {
+  background-color: #465b52;
+}
+#proDetails .single-pro-details span {
+  line-height: 25px;
 }
